force-app/main/default/objects/Student__c/fields/Student_Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Student_Roll_No__c</fullName>
    <label>Student Roll No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>