force-app/main/default/objects/Student__c/recordTypes/naresh_account.recordType-meta.xml
<RecordType>
    <fullName>naresh_account</fullName>
    <active>true</active>
    <label>naresh account</label>
</RecordType>