force-app/main/default/objects/Student__c/validationRules/Student_Course_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Course_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Course__c, &quot;Salesforce&quot; )),
Course_Fee__c &lt;= 5000
)</errorConditionFormula>
    <errorMessage>Enter Salesforce course fees less than 5000</errorMessage>
</ValidationRule>