force-app/main/default/objects/Student__c/validationRules/student_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>student_phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISBLANK( Phone_Number__c ) &amp;&amp; 
NOT(REGEX( Phone_Number__c , &quot;^(?=.*?[1-9])[0-9()/\\-\\+\\s\\.]+$&quot;))</errorConditionFormula>
    <errorMessage>Phone numbers should be in this format.</errorMessage>
</ValidationRule>